# datafusion-adapter

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yaml
src/harlequin_datafusion/: __init__.py  adapter.py
tests/: test_adapter.py
tests/data/: functional_alltypes.parquet
